CLEANFILES =
DISTCLEANFILES =
BUILT_SOURCES =
EXTRA_DIST =

pkglibdir = $(libdir)/gnome-builder
pkglib_LTLIBRARIES = libide-1.0.la

headersdir = $(includedir)/gnome-builder-@VERSION@/libide
nobase_headers_DATA = \
	$(libide_1_0_la_public_headers) \
	$(builddir)/ide-enums.h

libide_1_0_la_public_headers = \
	directory/ide-directory-build-system.h \
	directory/ide-directory-genesis-addin.h \
	directory/ide-directory-vcs.h \
	doap/ide-doap-person.h \
	doap/ide-doap.h \
	editor/ide-editor-perspective.h \
	editor/ide-editor-view-addin.h \
	editor/ide-editor-view.h \
	genesis/ide-genesis-addin.h \
	genesis/ide-genesis-perspective.h \
	ide-application-addin.h \
	ide-application-credits.h \
	ide-application-tool.h \
	ide-application.h \
	ide-back-forward-item.h \
	ide-back-forward-list.h \
	ide-buffer-change-monitor.h \
	ide-buffer-manager.h \
	ide-buffer.h \
	ide-build-result-addin.h \
	ide-build-result.h \
	ide-build-system.h \
	ide-builder.h \
	ide-completion-item.h \
	ide-completion-provider.h \
	ide-completion-results.h \
	ide-configuration-manager.h \
	ide-configuration.h \
	ide-context.h \
	ide-debug.h \
	ide-debugger.h \
	ide-deployer.h \
	ide-device-manager.h \
	ide-device-provider.h \
	ide-device.h \
	ide-diagnostic-provider.h \
	ide-diagnostic.h \
	ide-diagnostician.h \
	ide-diagnostics.h \
	ide-environment-editor-row.h \
	ide-environment-editor.h \
	ide-environment-variable.h \
	ide-environment.h \
	ide-executable.h \
	ide-executer.h \
	ide-extension-adapter.h \
	ide-extension-set-adapter.h \
	ide-file-settings.defs \
	ide-file-settings.h \
	ide-file.h \
	ide-fixit.h \
	ide-global.h \
	ide-highlight-engine.h \
	ide-highlight-index.h \
	ide-highlighter.h \
	ide-indent-style.h \
	ide-indenter.h \
	ide-layout-grid.h \
	ide-layout-pane.h \
	ide-layout-stack-split.h \
	ide-layout-stack.h \
	ide-layout-view.h \
	ide-layout.h \
	ide-log.h \
	ide-macros.h \
	ide-object.h \
	ide-pattern-spec.h \
	ide-perspective.h \
	ide-preferences-addin.h \
	ide-preferences.h \
	ide-process.h \
	ide-progress.h \
	ide-project-file.h \
	ide-project-files.h \
	ide-project-info.h \
	ide-project-item.h \
	ide-project-miner.h \
	ide-project.h \
	ide-recent-projects.h \
	ide-refactory.h \
	ide-runtime-manager.h \
	ide-runtime-provider.h \
	ide-runtime.h \
	ide-script-manager.h \
	ide-script.h \
	ide-search-context.h \
	ide-search-engine.h \
	ide-search-provider.h \
	ide-search-reducer.h \
	ide-search-result.h \
	ide-service.h \
	ide-settings.h \
	ide-source-location.h \
	ide-source-map.h \
	ide-source-range.h \
	ide-source-snippet-chunk.h \
	ide-source-snippet-context.h \
	ide-source-snippet.h \
	ide-source-snippets-manager.h \
	ide-source-snippets.h \
	ide-source-style-scheme.h \
	ide-source-view-mode.h \
	ide-source-view.h \
	ide-subprocess-launcher.h \
	ide-symbol-node.h \
	ide-symbol-resolver.h \
	ide-symbol-tree.h \
	ide-symbol.h \
	ide-tags-builder.h \
	ide-target.h \
	ide-test-case.h \
	ide-test-suite.h \
	ide-thread-pool.h \
	ide-tree-builder.h \
	ide-tree-node.h \
	ide-tree-types.h \
	ide-tree.h \
	ide-types.h \
	ide-unsaved-file.h \
	ide-unsaved-files.h \
	ide-uri.h \
	ide-vcs-uri.h \
	ide-vcs.h \
	ide-workbench-addin.h \
	ide-workbench-header-bar.h \
	ide-workbench.h \
	ide-worker.h \
	ide.h \
	local/ide-local-device.h \
	preferences/ide-preferences-bin.h \
	preferences/ide-preferences-entry.h \
	preferences/ide-preferences-file-chooser-button.h \
	preferences/ide-preferences-flow-box.h \
	preferences/ide-preferences-font-button.h \
	preferences/ide-preferences-group.h \
	preferences/ide-preferences-page.h \
	preferences/ide-preferences-spin-button.h \
	preferences/ide-preferences-switch.h \
	search/ide-omni-search-display.h \
	search/ide-omni-search-entry.h \
	search/ide-omni-search-group.h \
	search/ide-omni-search-row.h \
	template/ide-project-template.h \
	template/ide-template-base.h \
	template/ide-template-provider.h \
	util/ide-cairo.h \
	util/ide-dnd.h \
	util/ide-file-manager.h \
	util/ide-gtk.h \
	util/ide-line-reader.h \
	util/ide-list-inline.h \
	util/ide-pango.h \
	util/ide-posix.h \
	util/ide-rgba.h \
	$(NULL)

libide_1_0_la_public_sources = \
	directory/ide-directory-build-system.c \
	directory/ide-directory-genesis-addin.c \
	directory/ide-directory-plugin.c \
	directory/ide-directory-vcs.c \
	doap/ide-doap-person.c \
	doap/ide-doap.c \
	editor/ide-editor-perspective.c \
	editor/ide-editor-view-addin.c \
	editor/ide-editor-view.c \
	genesis/ide-genesis-addin.c \
	genesis/ide-genesis-perspective.c \
	ide-application-addin.c \
	ide-application-tool.c \
	ide-application.c \
	ide-back-forward-item.c \
	ide-back-forward-list-load.c \
	ide-back-forward-list-save.c \
	ide-back-forward-list.c \
	ide-buffer-change-monitor.c \
	ide-buffer-manager.c \
	ide-buffer.c \
	ide-build-result-addin.c \
	ide-build-result.c \
	ide-build-system.c \
	ide-builder.c \
	ide-completion-item.c \
	ide-completion-provider.c \
	ide-completion-results.c \
	ide-configuration-manager.c \
	ide-configuration.c \
	ide-context.c \
	ide-debugger.c \
	ide-deployer.c \
	ide-device-manager.c \
	ide-device-provider.c \
	ide-device.c \
	ide-diagnostic-provider.c \
	ide-diagnostic.c \
	ide-diagnostician.c \
	ide-diagnostics.c \
	ide-environment-editor-row.c \
	ide-environment-editor.c \
	ide-environment-variable.c \
	ide-environment.c \
	ide-executable.c \
	ide-executer.c \
	ide-extension-adapter.c \
	ide-extension-set-adapter.c \
	ide-file-settings.c \
	ide-file-settings.defs \
	ide-file.c \
	ide-fixit.c \
	ide-highlight-engine.c \
	ide-highlight-index.c \
	ide-highlighter.c \
	ide-indenter.c \
	ide-layout-grid.c \
	ide-layout-pane.c \
	ide-layout-stack.c \
	ide-layout-view.c \
	ide-layout.c \
	ide-log.c \
	ide-object.c \
	ide-pattern-spec.c \
	ide-perspective.c \
	ide-preferences-addin.c \
	ide-preferences.c \
	ide-process.c \
	ide-progress.c \
	ide-project-file.c \
	ide-project-files.c \
	ide-project-info.c \
	ide-project-item.c \
	ide-project-miner.c \
	ide-project.c \
	ide-recent-projects.c \
	ide-refactory.c \
	ide-runtime-manager.c \
	ide-runtime-provider.c \
	ide-runtime.c \
	ide-script-manager.c \
	ide-script.c \
	ide-search-context.c \
	ide-search-engine.c \
	ide-search-provider.c \
	ide-search-result.c \
	ide-service.c \
	ide-settings.c \
	ide-source-location.c \
	ide-source-map.c \
	ide-source-range.c \
	ide-source-snippet-chunk.c \
	ide-source-snippet-context.c \
	ide-source-snippet.c \
	ide-source-snippets-manager.c \
	ide-source-snippets.c \
	ide-source-style-scheme.c \
	ide-source-view-mode.c \
	ide-source-view.c \
	ide-subprocess-launcher.c \
	ide-symbol-node.c \
	ide-symbol-resolver.c \
	ide-symbol-tree.c \
	ide-symbol.c \
	ide-tags-builder.c \
	ide-target.c \
	ide-test-case.c \
	ide-test-suite.c \
	ide-thread-pool.c \
	ide-tree-builder.c \
	ide-tree-node.c \
	ide-tree.c \
	ide-unsaved-file.c \
	ide-unsaved-files.c \
	ide-uri.c \
	ide-vcs-uri.c \
	ide-vcs.c \
	ide-workbench-addin.c \
	ide-workbench-header-bar.c \
	ide-workbench-open.c \
	ide-workbench.c \
	ide-worker.c \
	ide.c \
	local/ide-local-device.c \
	preferences/ide-preferences-entry.c \
	preferences/ide-preferences-file-chooser-button.c \
	preferences/ide-preferences-flow-box.c \
	preferences/ide-preferences-font-button.c \
	preferences/ide-preferences-group.c \
	preferences/ide-preferences-page.c \
	preferences/ide-preferences-spin-button.c \
	preferences/ide-preferences-switch.c \
	search/ide-omni-search-display.c \
	search/ide-omni-search-entry.c \
	search/ide-omni-search-group.c \
	search/ide-omni-search-row.c \
	template/ide-project-template.c \
	template/ide-template-base.c \
	template/ide-template-provider.c \
	util/ide-cairo.c \
	util/ide-dnd.c \
	util/ide-file-manager.c \
	util/ide-gtk.c \
	util/ide-line-reader.c \
	util/ide-pango.c \
	util/ide-posix.c \
	util/ide-rgba.c \
	$(NULL)

libide_1_0_la_SOURCES = \
	$(libide_1_0_la_public_headers) \
	$(libide_1_0_la_public_sources) \
	editor/ide-editor-frame-actions.c \
	editor/ide-editor-frame-actions.h \
	editor/ide-editor-frame.c \
	editor/ide-editor-frame.h \
	editor/ide-editor-frame-private.h \
	editor/ide-editor-map-bin.c \
	editor/ide-editor-map-bin.h \
	editor/ide-editor-plugin.c \
	editor/ide-editor-print-operation.c \
	editor/ide-editor-print-operation.h \
	editor/ide-editor-tweak-widget.c \
	editor/ide-editor-tweak-widget.h \
	editor/ide-editor-view-actions.c \
	editor/ide-editor-view-actions.h \
	editor/ide-editor-view-addin-private.h \
	editor/ide-editor-view-private.h \
	editor/ide-editor-workbench-addin.c \
	editor/ide-editor-workbench-addin.h \
	gconstructor.h \
	greeter/ide-greeter-perspective.c \
	greeter/ide-greeter-perspective.h \
	greeter/ide-greeter-project-row.c \
	greeter/ide-greeter-project-row.h \
	gsettings/ide-gsettings-file-settings.c \
	gsettings/ide-gsettings-file-settings.h \
	gsettings/ide-language-defaults.c \
	gsettings/ide-language-defaults.h \
	ide-application-command-line.c \
	ide-application-actions.c \
	ide-application-actions.h \
	ide-application-plugins.c \
	ide-application-private.h \
	ide-application-tests.c \
	ide-application-tests.h \
	ide-async-helper.c \
	ide-async-helper.h \
	ide-back-forward-list-private.h \
	ide-battery-monitor.c \
	ide-battery-monitor.h \
	ide-css-provider.c \
	ide-css-provider.h \
	ide-extension-util.c \
	ide-extension-util.h \
	ide-internal.h \
	ide-keybindings.c \
	ide-keybindings.h \
	ide-layout-stack-actions.c \
	ide-layout-stack-actions.h \
	ide-layout-stack-private.h \
	ide-layout-tab.c \
	ide-layout-tab.h \
	ide-layout-tab-bar.c \
	ide-layout-tab-bar.h \
	ide-line-change-gutter-renderer.c \
	ide-line-change-gutter-renderer.h \
	ide-line-diagnostics-gutter-renderer.c \
	ide-line-diagnostics-gutter-renderer.h \
	ide-perspective-switcher.c \
	ide-perspective-switcher.h \
	ide-ref-ptr.c \
	ide-ref-ptr.h \
	ide-search-reducer.c \
	ide-shortcuts-window.c \
	ide-shortcuts-window.h \
	ide-source-iter.c \
	ide-source-iter.h \
	ide-source-snippet-completion-item.c \
	ide-source-snippet-completion-item.h \
	ide-source-snippet-completion-provider.c \
	ide-source-snippet-completion-provider.h \
	ide-source-snippet-parser.c \
	ide-source-snippet-parser.h \
	ide-source-snippet-private.h \
	ide-source-view-capture.c \
	ide-source-view-capture.h \
	ide-source-view-movements.c \
	ide-source-view-movements.h \
	ide-text-iter.c \
	ide-text-iter.h \
	ide-theme-manager.c \
	ide-theme-manager.h \
	ide-tree-private.h \
	ide-workbench-actions.c \
	ide-workbench-private.h \
	ide-worker-manager.c \
	ide-worker-manager.h \
	ide-worker-process.c \
	ide-worker-process.h \
	modelines/ide-modelines-file-settings.c \
	modelines/ide-modelines-file-settings.h \
	modelines/modeline-parser.c \
	modelines/modeline-parser.h \
	preferences/ide-preferences-builtin.c \
	preferences/ide-preferences-builtin.h \
	preferences/ide-preferences-bin.c \
	preferences/ide-preferences-bin-private.h \
	preferences/ide-preferences-group-private.h \
	preferences/ide-preferences-language-row.c \
	preferences/ide-preferences-language-row.h \
	preferences/ide-preferences-page-private.h \
	preferences/ide-preferences-perspective.c \
	preferences/ide-preferences-perspective.h \
	theatrics/ide-box-theatric.c \
	theatrics/ide-box-theatric.h \
	util/ide-doc-seq.c \
	util/ide-doc-seq.h \
	util/ide-gdk.c \
	util/ide-gdk.h \
	util/ide-text-util.c \
	util/ide-text-util.h \
	util/ide-window-settings.c \
	util/ide-window-settings.h \
	$(NULL)

libide_1_0_la_includes = \
	$(DEBUG_CFLAGS) \
	-DPACKAGE_DATADIR="\"${datadir}\"" \
	-DPACKAGE_LOCALE_DIR=\""${datadir}/locale"\" \
	-DPACKAGE_LIBDIR=\""${libdir}"\" \
	-DBUILDDIR=\""${abs_top_builddir}"\" \
	-DSRCDIR=\""${abs_top_srcdir}"\" \
	-I$(top_builddir)/libide \
	-I$(top_srcdir)/contrib/egg \
	-I$(top_srcdir)/contrib/gd \
	-I$(top_srcdir)/contrib/nautilus \
	-I$(top_srcdir)/contrib/pnl \
	-I$(top_srcdir)/contrib/search \
	-I$(top_srcdir)/contrib/tmpl \
	-I$(top_srcdir)/contrib/xml \
	-I$(top_builddir)/contrib/pnl \
	-I$(top_builddir)/contrib/tmpl \
	-I$(top_builddir)/data/icons/hicolor \
	-I$(srcdir) \
	-I$(srcdir)/doap \
	-I$(srcdir)/editor \
	-I$(srcdir)/greeter \
	-I$(srcdir)/genesis \
	-I$(srcdir)/gsettings \
	-I$(srcdir)/local \
	-I$(srcdir)/modelines \
	-I$(srcdir)/preferences \
	-I$(builddir)/resources \
	-I$(srcdir)/theatrics \
	-I$(srcdir)/util \
	$(NULL)

libide_1_0_la_CPPFLAGS = \
	$(AM_CPPFLAGS) \
	$(libide_1_0_la_includes) \
	$(NULL)

libide_1_0_la_CFLAGS = \
	$(AM_CFLAGS) \
	$(LIBIDE_CFLAGS) \
	$(OPTIMIZE_CFLAGS) \
	$(DEBUG_CFLAGS) \
	$(libide_1_0_la_includes) \
	$(NULL)

libide_1_0_la_CXXFLAGS = \
	$(AM_CXXFLAGS) \
	$(LIBIDE_CFLAGS) \
	$(libide_1_0_la_includes) \
	$(OPTIMIZE_CFLAGS) \
	$(NULL)

libide_1_0_la_LDFLAGS = \
	$(OPTIMIZE_LDFLAGS) \
	-avoid-version \
	-no-undefined \
	-export-symbols-regex '^(ide_|_ide_).*' \
	$(NULL)

libide_1_0_la_LIBADD = \
	$(LIBIDE_LIBS) \
	$(SHM_LIB) \
	-lm \
	$(top_builddir)/data/icons/hicolor/libicons.la \
	$(top_builddir)/contrib/egg/libegg-private.la \
	$(top_builddir)/contrib/gd/libgd.la \
	$(top_builddir)/contrib/nautilus/libnautilus.la \
	$(top_builddir)/contrib/pnl/libpanel-gtk.la \
	$(top_builddir)/contrib/search/libsearch.la \
	$(top_builddir)/contrib/tmpl/libtemplate-glib-1.0.la \
	$(top_builddir)/contrib/xml/libxml.la \
	$(NULL)

libide_1_0_la_built_sources = \
	resources/ide-resources.c \
	resources/ide-resources.h \
	$(NULL)


if ENABLE_EDITORCONFIG
libide_1_0_la_SOURCES += \
	editorconfig/editorconfig-glib.c \
	editorconfig/editorconfig-glib.h \
	editorconfig/ide-editorconfig-file-settings.c \
	editorconfig/ide-editorconfig-file-settings.h

libide_1_0_la_includes += \
	-I$(top_srcdir)/contrib/libeditorconfig \
	-I$(srcdir)/editorconfig

libide_1_0_la_LIBADD += $(top_builddir)/contrib/libeditorconfig/libeditorconfig.la
endif


if ENABLE_PYTHON_SCRIPTING
libide_1_0_la_includes += -I$(srcdir)/pygobject
libide_1_0_la_SOURCES += \
	pygobject/ide-pygobject-script.c \
	pygobject/ide-pygobject-script.h
libide_1_0_la_CFLAGS += \
	$(PYGOBJECT_CFLAGS) \
	-DENABLE_PYTHON_SCRIPTING
libide_1_0_la_LIBADD += $(PYGOBJECT_LIBS)
endif


glib_enum_h = ide-enums.h
glib_enum_c = ide-enums.c
glib_enum_headers =  \
	doap/ide-doap.h \
	ide-buffer.h \
	ide-build-result.h \
	ide-diagnostic.h \
	ide-highlighter.h \
	ide-indent-style.h \
	ide-layout-stack-split.h \
	ide-source-view.h \
	ide-symbol.h \
	ide-thread-pool.h \
	$(NULL)
include $(top_srcdir)/build/autotools/Makefile.am.enums


glib_resources_c = resources/ide-resources.c
glib_resources_h = resources/ide-resources.h
glib_resources_xml = resources/libide.gresource.xml
glib_resources_namespace = ide
include $(top_srcdir)/build/autotools/Makefile.am.gresources

nodist_libide_1_0_la_SOURCES = \
	ide-enums.h \
	ide-enums.c \
	resources/ide-resources.c \
	resources/ide-resources.h \
	$(NULL)


if HAVE_INTROSPECTION
-include $(INTROSPECTION_MAKEFILE)

INTROSPECTION_GIRS =
INTROSPECTION_SCANNER_ARGS = --add-include-path=$(srcdir) --warn-all
INTROSPECTION_COMPILER_ARGS = \
	--includedir=$(srcdir) \
	--includedir=$(top_builddir)/contrib/egg \
	--includedir=$(top_builddir)/contrib/pnl \
	--includedir=$(top_builddir)/contrib/tmpl

introspection_sources = \
	$(libide_1_0_la_public_sources) \
	$(libide_1_0_la_public_headers) \
	ide-enums.h \
	ide-enums.c \
	$(NULL)

Ide-1.0.gir: libide-1.0.la
Ide_1_0_gir_INCLUDES = Gio-2.0 GtkSource-3.0 Peas-1.0
Ide_1_0_gir_CFLAGS = $(libide_1_0_la_CFLAGS)
Ide_1_0_gir_LIBS = \
	libide-1.0.la \
	$(top_builddir)/contrib/egg/libegg-private.la \
	$(top_builddir)/contrib/tmpl/libtemplate-glib-1.0.la
Ide_1_0_gir_FILES = $(introspection_sources)
Ide_1_0_gir_SCANNERFLAGS = \
	--include-uninstalled=$(top_builddir)/contrib/egg/Egg-1.0.gir \
	--include-uninstalled=$(top_builddir)/contrib/pnl/Pnl-1.0.gir \
	--include-uninstalled=$(top_builddir)/contrib/tmpl/Template-1.0.gir \
	--c-include="ide.h" \
	-n Ide \
	$(NULL)
INTROSPECTION_GIRS += Ide-1.0.gir

girdir = $(datadir)/gnome-builder/gir-1.0
gir_DATA = $(INTROSPECTION_GIRS)

typelibdir = $(pkglibdir)/girepository-1.0
typelib_DATA = $(INTROSPECTION_GIRS:.gir=.typelib)

CLEANFILES += $(gir_DATA) $(typelib_DATA)
endif


if ENABLE_VAPIGEN
-include $(VAPIGEN_MAKEFILE)

libide-1.0.vapi: Ide-1.0.gir

VAPIGEN_VAPIS = libide-1.0.vapi

libide_1_0_vapi_DEPS = \
	gio-2.0 \
	gtk+-3.0 \
	gtksourceview-3.0 \
	libpeas-1.0 \
	panel-gtk \
	template-glib-1.0 \
	egg-private
libide_1_0_vapi_METADATADIRS = $(srcdir)
libide_1_0_vapi_FILES = Ide-1.0.gir
libide_1_0_vapi_VAPIDIRS = \
	$(top_builddir)/contrib/egg \
	$(top_builddir)/contrib/pnl \
	$(top_builddir)/contrib/tmpl
libide_1_0_vapi_GIRDIRS = \
	$(top_builddir)/contrib/egg \
	$(top_builddir)/contrib/pnl \
	$(top_builddir)/contrib/tmpl

libide-1.0.deps: Makefile
	$(AM_V_GEN) echo $(libide_1_0_vapi_DEPS) | tr ' ' '\n' > $@

vapidir = $(datadir)/gnome-builder/vapi
vapi_DATA = $(VAPIGEN_VAPIS) $(VAPIGEN_VAPIS:.vapi=.deps)

EXTRA_DIST += libide-1.0.deps

DISTCLEANFILES += $(vapi_DATA)
endif


if ENABLE_PYTHON_SCRIPTING
overridesdir = $(pyoverridesdir)
overrides_PYTHON = Ide.py
endif


-include $(top_srcdir)/git.mk
